chore: update some details for guide (#1681)
Former-commit-id: c0fd97bbc5f882b04de27ce1c692143c48e634e4

--- a/frontend/src/plugins/demo/style.css
+++ b/frontend/src/plugins/demo/style.css
@@ -1,6 +1,5 @@
 .bb-guide-cover-wrapper {
   @apply fixed inset-0;
-  background-color: rgb(33 33 33 / 30%);
   z-index: 999998;
 }
 
@@ -14,19 +13,24 @@
   z-index: 999999;
 }
 
+.bb-guide-highlight-wrapper.covered {
+  box-shadow: rgb(33 33 33 / 80%) 0px 0px 1px 2px,
+    rgb(33 33 33 / 50%) 0px 0px 0px 5000px;
+}
+
 .bb-guide-dialog {
-  @apply absolute bg-white w-72 m-1 text-black p-2 px-3 rounded-lg text-left;
+  @apply absolute bg-white w-72 m-1 text-black p-2 px-3 rounded-lg text-left -top-full -left-full;
   box-shadow: 0 3px 30px rgb(33 33 33 / 30%);
   z-index: 1000000;
 }
 
 .bb-guide-close-button {
-  @apply absolute top-0 right-1 px-1 text-xl rounded opacity-80 hover:opacity-60;
-  cursor: pointer;
+  @apply absolute top-0 right-1 px-1 rounded cursor-pointer opacity-60 hover:opacity-50;
+  font-size: 24px;
 }
 
 .bb-guide-title-text {
-  @apply text-lg text-black leading-6 py-1 mb-1;
+  @apply text-lg text-black leading-6 py-1 my-1 pr-3;
 }
 
 .bb-guide-description-text {
