fix: set locale from params to localstorage (#1850)
* chore: fix typo

* fix: set locale

Former-commit-id: cae67b3cb9b07600f77bbe52de44d5758628e0ac

--- a/frontend/src/plugins/demo/style.css
+++ b/frontend/src/plugins/demo/style.css
@@ -52,7 +52,7 @@
 }
 
 .bb-hint-wrapper {
-  @apply absolute rounded transition-all cursor-pointer;
+  @apply absolute rounded cursor-pointer;
   z-index: 999999;
   box-shadow: rgb(33 33 33 / 80%) 0px 0px 1px 2px;
 }
