--- a/frontend/src/plugins/demo/style.css
+++ b/frontend/src/plugins/demo/style.css
@@ -2,6 +2,9 @@
 .bb-hint-cover-wrapper {
   @apply fixed inset-0 overflow-hidden;
   z-index: 999998;
+  pointer-events: auto !important;
+  backdrop-filter: blur(2px);
+  background: rgba(255, 255, 255, 0.4);
 }
 
 .bb-guide-target-element,
@@ -22,13 +25,73 @@
 
 .bb-guide-dialog,
 .bb-hint-dialog {
-  @apply fixed bg-white w-72 m-1 text-black p-3 px-4 rounded-lg text-left -top-full -left-full overflow-hidden;
+  @apply fixed bg-white w-72 m-1 my-2 text-black p-2 px-4 rounded text-left -top-full -left-full;
   box-shadow: 0 3px 30px rgb(33 33 33 / 30%);
   z-index: 1000000;
 }
 
 .bb-hint-dialog.tooltip-dialog {
   @apply mx-2;
+}
+
+.bb-hint-dialog.topright::before {
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  right: 24px;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid white;
+}
+
+.bb-hint-dialog.top {
+  margin-top: 0px;
+}
+.bb-hint-dialog.top::before {
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  left: 24px;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid white;
+}
+
+.bb-hint-dialog.bottom::before {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: 24px;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid white;
+}
+
+.bb-hint-dialog.left {
+  margin: 0;
+  margin-top: -6px;
+}
+.bb-hint-dialog.left::before {
+  content: "";
+  position: absolute;
+  top: 12px;
+  right: -6px;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-left: 6px solid white;
+}
+
+.bb-hint-dialog.right {
+  margin-top: -14px;
+}
+.bb-hint-dialog.right::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: -6px;
+  border-top: 6px solid transparent;
+  border-bottom: 6px solid transparent;
+  border-right: 6px solid white;
 }
 
 .bb-guide-close-button,
@@ -58,12 +121,10 @@
 .bb-hint-wrapper {
   @apply fixed rounded cursor-pointer overflow-hidden;
   z-index: 999999;
-  box-shadow: rgb(33 33 33 / 30%) 0px 0px 1px 2px;
 }
 
 .bb-hint-wrapper.covered {
-  box-shadow: rgb(33 33 33 / 80%) 0px 0px 1px 2px,
-    rgb(33 33 33 / 60%) 0px 0px 0px 5000px !important;
+  box-shadow: rgb(33 33 33 / 80%) 0px 0px 1px 2px, transparent 0px 0px 0px 100vw !important;
 }
 
 .bb-hint-wrapper.shield {
@@ -75,7 +136,7 @@
 
 .bb-hint-tooltip-wrapper {
   @apply fixed w-4 h-4 text-xs text-center leading-4 shadow-none rounded-full m-0 bg-white cursor-default;
-  animation: 2s linear 2s infinite breathing;
+  animation: 2s linear 0s infinite breathing;
   box-shadow: rgb(78 70 211) 0px 0px 1px 2px;
   color: rgb(78 70 211);
 }
