--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -202,7 +202,12 @@
   @apply invisible absolute -mt-8 ml-2 px-2 py-1 rounded bg-black bg-opacity-75 text-white;
 }
 
-.tooltip-wrapper:hover .tooltip {
+.tooltip-left {
+  @apply invisible absolute -top-1 right-6  px-2 py-1 rounded bg-black bg-opacity-75 text-white;
+}
+
+.tooltip-wrapper:hover .tooltip,
+.tooltip-wrapper:hover .tooltip-left {
   @apply visible z-50;
 }
 
